<resources>
    <string name="app_name">FileForge</string>
    <string name="first_check">I understand that sharing of inappropriate content will not be tolerated.</string>
    <string name="second_check">I confirm that Im 18 years old or above.</string>
    <string name="clickforprivacy">"By Clicking 'Get Started'. You are agree to above Privacy Policy and Terms of Use. "</string>
    <string name="string_no_data_found">No data found. Click on the button below to add the details.</string>
    <string name="string_prompt_webview_information">If you wish, you can click on the text in your resume and edit the details before generating the PDF file.</string>
    <string name="string_resume_details_instructions">Please kindly fill all the below details and click on the view resume button at the bottom of the screen.</string>
    <string name="string_resume_publishing_instructions">Your resume is not published online yet. Please kindly do the following steps to publish your resume.\n 1. Go to View Resume window.\n 2. Click on the Publish button at the bottom of the screen.\n 3. That\'s it your resume will be published.</string>
    <string name="website_address">https://resume.aloask.com/</string>
    <string name="first_para">We prioritize your privacy and data security. <b>Craft MyCV</b> does not store any user data on its servers. All your designs, creations, and any information you input into the application remain local to your device.</string>
    <string name="second_para">By using <b>Craft MyCV</b>, you confirm that you have the rights and eligibility to post, share, or create any form of content on the application.</string>
    <string name="third_para">We maintain strict guidelines to ensure a safe and respectful environment for all users. The following content is strictly prohibited:\n
1. Nudity or sexually explicit content, including text, images, or audio depicting extreme sexual acts or promoting pornographic services.\n
2. Encouragement or endorsement of terrorism, hate groups, or organized crime.\n
3. Sale, promotion, or solicitation of sexual services, weapons, or harmful drugs.\n
4. Content that incites hatred, violence, or discrimination based on race, ethnicity, gender, gender identity, sexual orientation, religion, disability, or disease.\n
5. Intentionally harmful content targeting private individuals.\n\n
    We do not allow the posting of graphic or violent imagery, videos, or content that could be distressing or inappropriate for a broad audience. Such content will be removed to ensure our platform remains suitable for everyone.</string>
    <string name="fourth_para">We encourage all users to report any violations of our guidelines using the in-app reporting feature. Your reports will be reviewed promptly, and appropriate actions will be taken.</string>
    <string name="five_para">As a user of <b>Craft MyCV</b>, you are responsible for ensuring that the content you create and share complies with our guidelines. You agree not to use the application for illegal, unethical, or harmful purposes.</string>
    <string name="six_para">We may update this privacy policy from time to time. Any changes will be reflected within the app, and continued use of <b>Craft MyCV</b> signifies your agreement to the updated terms.</string>
    <string name="terms_of_use">Privacy Policy / Terms of Use</string>
    <string name="get_started">Get Started</string>
    <string name="rate_app">Rate App</string>
    <string name="exit">Exit</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="privacy">Privacy</string>
    <string name="start">Start</string>
    <string name="more">More</string>
    <string name="resume">My Resume</string>
    <string name="app_tools">App Tools</string>
    <string name="create">Create</string>
    <string name="build_a_professional_resume_for_free">Build a Professional Resume for Free</string>
    <string name="create_a_resume_easily_with_our_free_builder_and_professional_templates">Create a resume easily with our free builder and professional templates.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="new_to_craft_cv">New to FileForge?</string>
    <string name="joined_us_before">Joined us before?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="_continue">Continue</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_designation">Enter your designation</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="login_with_google">Login with Google</string>
    <string name="please_wait">Please wait...!</string>
    <string name="accept_term_condition">By Signing up, you\'re agree to our Terms &amp; Condition and Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_resume">Create Resume</string>
    <string name="cancel">Cancel</string>
    <string name="term_and_privacy">Term and Privacy</string>
    <string name="languages">Languages</string>
    <string name="my_account">My Account</string>
    <string name="profile">Profile</string>
    <string name="term_of_use">Term of Use</string>
    <string name="term_of_privacy">Term of Privacy</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="write_us_on">Write Us On</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="resume_deleted_successfully">Resume Deleted Successfully</string>
    <string name="resume_created_successfully">Resume Created Successfully.</string>
    <string name="enter_mandatory_details">Enter mandatory details.</string>
    <string name="please_enter_name">Please enter the name.</string>
    <string name="tips_for_your_resume">Tips for your resume</string>
    <string name="please_wait_while_we_are_fetching_your_details">Please wait, while we are fetching your details.</string>
    <string name="tips_for_resume">Tips for Creating a Resume</string>
    <string name="point_1"><b>Keep It Concise</b>\nLimit your resume to one or two pages, focusing on relevant experience.</string>
    <string name="point_2"><b>Use a Clean Layout</b>\nChoose a professional, easy-to-read format with clear headings and consistent font sizes.</string>
    <string name="point_3"><b>Include Relevant Skills</b>\nist both technical and soft skills relevant to the job.</string>
    <string name="point_4"><b>Start with a Strong Summary</b>\nA brief, compelling statement highlighting your skills, experience, and career goals.</string>
    <string name="point_5"><b>Highlight Key Achievements</b>\nUse bullet points to showcase accomplishments rather than just job responsibilities.</string>
    <string name="point_6"><b>Include Relevant Skills</b>\nList both technical and soft skills relevant to the job.</string>
    <string name="point_7"><b>Showcase Certifications &amp; Education</b>\nMention degrees, relevant courses, and certifications.</string>
    <string name="point_8"><b>Avoid Personal Details</b>\nSkip unnecessary details like age, marital status, or religion unless required.</string>
    <string name="p_first_point">Thank you for using <b>FileForge</b>. Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you use our App.</string>
    <string name="p_second_point"><b>Information We Collect</b> We collect the following personal information to provide and improve our services:\n<b>Personal Details:</b>Name, email,mobile no, profile photo and address.\n<b>Education &amp; Work Experience:</b>Information about your education, skills, and work history.\n<b>Device Permissions:</b>The App may request access to your camera, storage, and network to enhance your experience.</string>
    <string name="p_third_point"><b>How We Use Your Information</b>We use your information to:\nCreate and manage your resume.\nImprove user experience and functionality.\nProvide customer support and resolve issues.\nEnsure compliance with legal and security requirements.</string>
    <string name="p_fourth_point"><b>Data Sharing and Security</b>\nWe do not sell or share your personal information with third parties except as required by law.\nWe implement security measures to protect your data from unauthorized access or misuse.</string>
    <string name="p_fifth_point"><b>Permissions We Use</b>\nINTERNET: To allow online access and sync data.\nCAMERA: To capture your profile/resume photo.\nWRITE_EXTERNAL_STORAGE: To save your resume on your device.\nACCESS_NETWORK_STATE: To check internet connectivity for syncing data.</string>
    <string name="p_sixth_point"><b>Your Rights and Choices</b>You have the right to:\nAccess, update, or delete your personal information within the App.\nRevoke permissions granted to the App via your device settings.\nContact us for any concerns related to your privacy.</string>
    <string name="t_first_point"><b>Acceptance of Terms</b> By using FileForge, you agree to comply with these Terms of Use. If you do not agree, please do not use the App.</string>
    <string name="t_second_point"><b>User Responsibilities</b>\nYou are responsible for maintaining the confidentiality of your login credentials.\nYou agree to provide accurate and truthful information while using the App.\nYou must not misuse the App or attempt to interfere with its functionality.</string>
    <string name="t_third_point"><b>License and Restrictions</b>\nWe grant you a limited, non-exclusive, and non-transferable license to use the App.\nYou may not modify, distribute, or reverse-engineer any part of the App.</string>
    <string name="t_fourth_point"><b>Termination</b> We reserve the right to terminate or restrict your access to the App if you violate these terms.</string>
    <string name="t_fifth_point"><b>Limitation of Liability</b> We are not responsible for any direct, indirect, or incidental damages arising from the use of the App.</string>
    <string name="t_sixth_point">We may update this Privacy Policy and Terms of Use from time to time. Continued use of the App after updates means you accept the changes.</string>
    <string name="t_seven_point">For any questions, please contact us at rssphere0@gmail.com.</string>
    <string name="hey">Hey,</string>
    <string name="create_your_own_resume_to_apply_for_jobs">Create your own resume to apply for jobs.</string>
    <string name="recent">Recent</string>
    <string name="craft_impress_succeed">Craft. Impress. Succeed.</string>
    <string name="objective_career_goal_aim">Objective/Career Goal/Aim :</string>
    <string name="save_details">Save Details</string>
    <string name="educational_details">Educational Details</string>
    <string name="degree_course">* Degree/Course :</string>
    <string name="b_s_computer_science">B.S (Computer Science)</string>
    <string name="university_school">* University/School :</string>
    <string name="university_of_california_san_diego">University of California - San Diego</string>
    <string name="grade_score">* Grade/Score :</string>
    <string name="_3_6_4">3.6/4</string>
    <string name="duration">* Duration :</string>
    <string name="end">End</string>
    <string name="english">English</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to log out?</string>
</resources>