<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBF2FB"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dp_10"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow"
            app:tint="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_15"
            android:fontFamily="@font/abyssinica_sil"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/terms_of_use"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/first_check"
        android:layout_below="@+id/top"
        android:layout_margin="@dimen/dp_7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/p_first_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/p_second_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/p_third_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/p_fourth_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/p_fifth_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/p_sixth_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/t_first_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/t_second_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/t_third_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/t_fourth_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/t_fifth_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/t_sixth_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abyssinica_sil"
                android:text="@string/t_seven_point"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <CheckBox
        android:id="@+id/first_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/second_check"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:buttonTint="@color/colorAccent"
        android:checked="false"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/first_check"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />

    <CheckBox
        android:id="@+id/second_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/termtextview"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:buttonTint="@color/colorAccent"
        android:checked="false"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/second_check"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/termtextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        android:gravity="center"
        android:padding="@dimen/dp_7"
        android:text="@string/clickforprivacy"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/accept_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/ratebox"
            android:gravity="center"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
</RelativeLayout>