<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dp_15"
    app:cardElevation="@dimen/dp_10"
    android:elevation="@dimen/dp_10"
    android:background="@null">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/educational_details"
                android:textColor="@color/dodgerblue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/degree_course"
                android:textColor="@color/dodgerblue"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edittext_education_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_focused_effect"
                android:hint="@string/b_s_computer_science"
                android:inputType="textCapSentences"
                android:maxLength="200"
                android:padding="15dp"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/university_school"
                android:textColor="@color/dodgerblue"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edittext_education_university"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_focused_effect"
                android:hint="@string/university_of_california_san_diego"
                android:inputType="textCapSentences"
                android:maxLength="200"
                android:padding="15dp"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/grade_score"
                android:textColor="@color/dodgerblue"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edittext_education_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_focused_effect"
                android:hint="@string/_3_6_4"
                android:inputType="text"
                android:maxLength="200"
                android:padding="15dp"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/duration"
                android:textColor="@color/dodgerblue"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/edittext_education_duration_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_focused_effect"
                    android:gravity="center"
                    android:text="@string/start"
                    android:padding="15dp"
                    android:textSize="@dimen/sp_14" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=" -- "
                    android:padding="15dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/edittext_education_duration_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_focused_effect"
                    android:gravity="center"
                    android:text="@string/end"
                    android:padding="15dp"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <Button
                android:id="@+id/button_save_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/button_ripple_effect"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/save_details"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@android:color/transparent"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/cancel"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>
