<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:elevation="@dimen/dp_10"
    app:cardCornerRadius="@dimen/dp_15"
    app:cardElevation="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/prompt_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prompt_button_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/google_background"
                android:text="@string/cancel"
                android:textSize="@dimen/sp_14"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/prompt_button_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_ripple_effect"
                android:text="@string/logout"
                android:textSize="@dimen/sp_14"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>