<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dp_15"
    app:cardElevation="@dimen/dp_10"
    android:elevation="@dimen/dp_10"
    android:background="@null">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/languages"
                android:textColor="@color/dodgerblue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />

            <EditText
                android:id="@+id/edittext_language_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_focused_effect"
                android:hint="@string/english"
                android:inputType="textCapSentences"
                android:maxLength="200"
                android:padding="15dp"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="@dimen/sp_14" />

            <Button
                android:id="@+id/button_save_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/button_ripple_effect"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:textAllCaps="false"
                android:text="@string/save_details"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>
